# MatX

./: .gitignore  AGENTS.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  RAPIDS.cmake  README.md  add_license.sh  compile_commands.json  conanfile.py  make_matx_release.sh
bench/: CMakeLists.txt
bench/00_misc/: fltflt_arithmetic.cu
bench/00_operators/: operators.cu  reduction.cu
bench/00_sparse/: SpMM.cu
bench/00_transform/: conv.cu  cub.cu  einsum.cu  fft.cu  matmul.cu  qr.cu  resample_poly.cu  sarbp.cu  svd_power.cu
bench/01_radar/: SingleChanSimplePipeline.cu
bench/scripts/: run_benchmarks.py  run_fltflt_benchmarks.py  run_sarbp_benchmarks.py
cmake/rapids-cmake/example/: CMakeLists.txt  source.cu
cmake/rapids-cmake/testing/: CMakeLists.txt  README.md
docs_input/: CMakeLists.txt  Doxyfile.in  build.rst  conf.py.in  creation.rst  executor_compatibility.rst  external.rst  index.rst  quickstart.rst  version.rst
docs_input/api/: einsum.rst  fft.rst  filter.rst  index.rst  inverse.rst  matmul.rst  nvtx.rst  reduce.rst  resample_poly.rst  solver.rst  sort.rst  tensorgenerators.rst  tensorops.rst  tensorshape.rst  transformations.rst  type_traits.rst  utilities.rst
docs_input/api/casting/: as_complex_double.rst  as_complex_float.rst  as_double.rst  as_float.rst  as_int16.rst  as_int32.rst  as_int64.rst  as_int8.rst  as_type.rst  as_uint16.rst  as_uint32.rst  as_uint64.rst  as_uint8.rst  index.rst
docs_input/api/io/: index.rst  read_csv.rst  read_mat.rst  read_npy.rst  set_print_format_type.rst  write_csv.rst  write_mat.rst  write_npy.rst
docs_input/api/logic/: index.rst
docs_input/api/polynomials/: index.rst  legendre.rst  polyval.rst
docs_input/api/random/: random.rst
docs_input/api/searchsort/: argmax.rst  argmin.rst  argminmax.rst  argsort.rst  find.rst  find_peaks.rst  findidx.rst  sort.rst  unique.rst
docs_input/api/signalimage/: index.rst
docs_input/api/singlethread/: gn.rst  index.rst  linalg.rst  svdpi.rst  trf.rst
docs_input/api/stats/: index.rst
docs_input/api/synchronization/: index.rst  sync.rst
docs_input/api/viz/: bar.rst  contour.rst  line.rst  scatter.rst  surf.rst
docs_input/api/window/: bartlett.rst  blackman.rst  flattop.rst  hamming.rst  hanning.rst
docs_input/basics/: broadcast.rst  concepts.rst  creation.rst  datatype.rst  debug.rst  fusion.rst  logging.rst  matlabpython.rst  memory.rst  nvtx.rst  print.rst  profiling.rst  sparse_tensor.rst  tensor.rst  vector.rst
docs_input/developer_guide/: docs.rst  index.rst  operators.rst  transforms.rst
docs_input/img/: Thumbs.db
docs_input/notebooks/: 01_introduction.ipynb  02_operators.ipynb  03_executors.ipynb  03_transforms.ipynb  04_radar_pipeline.ipynb  05_fusion.ipynb  06_profiling.ipynb  99_assignments.ipynb  clear_cache.sh  run.sh
docs_input/notebooks/exercises/: compile_and_run.sh  example1_adv_slice_col.cu  example1_adv_slice_row.cu  example1_assignment1.cu  example1_clone.cu  example1_init.cu  example1_permute.cu  example1_simple_slice.cu  example2_assignment1.cu  example2_conditional.cu  example2_eye.cu  example2_hamming.cu  example2_init.cu  example2_mixed_rank.cu  example2_multiple_ops.cu  example2_rand.cu  example2_scalar.cu  example4_pc.cu  (+16 more)
examples/: CMakeLists.txt  black_scholes.cu  cgsolve.cu  channelize_poly_bench.cu  conv2d.cu  convolution.cu  eigenExample.cu  fft_conv.cu  interpolate.cu  kernel_fusion.cu  mvdr_beamformer.cu  mvdr_beamformer.h  print_styles.cu  pwelch.cu  qr.cu  recursive_filter.cu  repro.cu  resample.cu  resample_poly_bench.cu  simple_pipeline.cu  simple_pipeline.h  simple_radar_pipeline.cu  simple_radar_pipeline.h  simple_radar_pipeline_test.sh  simple_stf_test.cu  singlethread_solve.cu  sparse_tensor.cu  spectrogram.cu  spectrogram_graph.cu  spherical_harmonics.cu  svd_power.cu  test_host.cpp
examples/cmake_sample_project/: CMakeLists.txt  main.cu
examples/python_integration_sample/: CMakeLists.txt  example_matxutil.py  matxutil.cu  mypythonlib.py
examples/sarbp/: README.md  cphd_to_sarbp_input.py  requirements.txt  sarbp.cu  view_sarbp_image.py
test/: CMakeLists.txt  main.cu  matx_test.sh
test/00_diff/: BasicDiffTests.cu
test/00_host/: OperatorTests.cc
test/00_io/: FileIOTests.cu  NvtxTests.cu  PrintTests.cu  small_csv_comma_nh.csv  small_csv_complex_comma_nh.csv  test.mat  test.npy
test/00_misc/: AllocatorTests.cu  CapabilitiesTests.cu  ClearCacheTests.cu  CudaExecutorCommonTests.cu  ErrorTests.cu  FloatFloatTests.cu  GridDimTests.cu  ProfilingTests.cu  PropertyTests.cu  TensorAccessorTests.cu
test/00_operators/: CMakeLists.txt  GeneratorTests.cu  OperatorTests.cu  PWelch.cu  PythonEmbed.cu  ReductionTests.cu  abs2_test.cu  advanced_op_test.cu  advanced_remap_test.cu  aliased_memory_test.cu  angle_test.cu  apply_idx_test.cu  apply_test.cu  at_test.cu  base_op_test.cu  broadcast_test.cu  cast_test.cu  clone_add_test.cu  clone_test.cu  collapse_test.cu  complex_cast_exceptions_test.cu  complex_cast_test.cu  complex_type_compatibility_test.cu  concat_test.cu  corrmap_test.cu  cross_test.cu  fftshift_test.cu  filter_test.cu  find_peaks.cu  flatten_test.cu  fmod_test.cu  frexp_test.cu  frexpc_test.cu  get_string_test.cu  ifelse_test.cu  interleaved_test.cu  interp_test.cu  isclose_test.cu  isnaninf_test.cu  legendre_test.cu  (+41 more)
test/00_solver/: Cholesky.cu  Det.cu  Eigen.cu  Inverse.cu  LU.cu  Pinv.cu  QR.cu  QR2.cu  QREcon.cu  SVD.cu  SolveDense.cu
test/00_sparse/: Basic.cu  Convert.cu  Dia.cu  Matmul.cu  Matvec.cu  Solve.cu  Sparse.cu
test/00_tensor/: BasicTensorTests.cu  CUBTests.cu  ContractionTests.cu  DLPackTests.cu  DynamicTensorTests.cu  EinsumTests.cu  MakeTensorTests.cu  ShapeTests.cu  Storage.cu  TensorCreationTests.cu  ViewTests.cu  VizTests.cu
test/00_transform/: ChannelizePoly.cu  ConvCorr.cu  Copy.cu  Cov.cu  FFT.cu  MatMul.cu  Norm.cu  PWelch.cu  ResamplePoly.cu  SarBp.cu  Solve.cu
test/01_radar/: MVDRBeamformer.cu  MultiChannelRadarPipeline.cu  ambgfun.cu  dct.cu
test/include/: prerun_tester.h  test_types.h  utilities.h
test/test_vectors/: GenerateTestVectors.py
(+1854 files in other folders)
